<resources>
    <string name="app_name">Borsch</string>

    <string name="settings_fragment_title">Настройки</string>

    <string name="tab_name_cookers">Повара</string>
    <string name="tab_name_basket">Корзина</string>
    <string name="tab_name_orders">Заказы</string>
    <string name="tab_name_support">Поддержка</string>
    <string name="tab_name_profile">Профиль</string>

    <string name="theme_dark">Тёмная тема</string>
    <string name="theme_light">Светаля тема</string>
    <string name="theme_system">Системная тема</string>

    <string name="default_search_hint">Введите текст для поиска</string>

    <string name="settings_about_us_title">О нас</string>

    <string name="about_us_text">Hi</string>

    <string name="onboarding_title">БОРЩ</string>

    <string name="onboarding_label_1">Ваш доступ\nк домашней еде</string>
    <string name="onboarding_label_2">Самовывоз или доставка в\nтечение 15 минут</string>
    <string name="onboarding_label_3">Справедливая цена без\nресторанных накруток</string>
    <string name="onboarding_label_4">Проверенные повара</string>

    <string name="dots_separator">%d / %d</string>

    <string name="auth_btn_send_code">Выслать код</string>
    <string name="auth_input_phone_title">Введите номер</string>
    <string name="auth_input_phone_sub_title">Чтобы создать аккаунт</string>
    <string name="auth_input_phone_hint">Номер телефона</string>
    <string name="auth_validate_phone_title">Подтверждение номера</string>
    <string name="auth_send_again_sms_title">Повторная отправка через</string>
    <string name="auth_sms_code_hint">СМС код</string>
    <string name="auth_sms_code_validate_description">Введите код, который\nмы отправили вам на телефон</string>
    <string name="auth_send_sms_again_btn">Отправить еще раз</string>

    <string name="map_change_address_btn">Изменить адрес доставки</string>
    <string name="map_confirm_btn">Я здесь</string>
    <string name="map_confirm_not_found_btn">Указать адрес</string>
    <string name="map_search_progress">Ищем…</string>

    <string name="address_search_hint">Поиск</string>
    <string name="address_add_new_sheet_title">Адрес доставки</string>
    <string name="address_add_new_btn">Добавить новый адрес</string>
    <string name="address_confirm_adding_new">Подтвердить</string>

    <string name="cookers_popular_meals">Популярные блюда</string>
    <string name="cooker_is_online">Онлайн</string>
    <string name="cooker_is_not_online">Неактивен</string>
    <string name="cooker_page_meals">Блюда</string>
    <string name="cooker_page_information">Информация</string>

    <string name="food_ingredients_title">Ингредиенты</string>
    <string name="food_description_title">Описание</string>
    <string name="food_combo_lunch_title">Комбо обед</string>
    <string name="food_meal_title">Блюдо</string>

    <string name="basket_page_title">Корзина</string>

    <string name="order_number_format">Заказ: %s</string>
    <string name="order_price_filter">Итого: %s</string>

    <string-array name="months_s">
        <item>января</item>
        <item>февраля</item>
        <item>марта</item>
        <item>апреля</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>августа</item>
        <item>сентября</item>
        <item>октября</item>
        <item>ноября</item>
        <item>декабря</item>
    </string-array>

    <string name="title_redirect">Перейти в\nмагазин приложений</string>
    <string name="no_internet">Нет интернет-соединения</string>
    <string name="old_api_error">API устарело</string>
    <string name="server_error">Проблемы на сервере. Скоро все исправим</string>
    <string name="default_error">Что-то пошло не так. Попробуй еще раз</string>
    <string name="api_not_connect_error">Google Play устарели</string>

    <string name="error_empty_state">У нас что-то поломалось, кина не будет</string>
    <string name="error_empty_update_page">Перезагрузить страницу</string>
    <string name="error_state_search">По запросу «%1$s» ничего не нашлось</string>

    <string name="price_format">%1$s ₽</string>
    <string name="min_price_format">от %1$s ₽</string>
    <string name="weight_format">%d мл</string>
    <string name="weight_1_portion">1 порция: ~ %d мл</string>

    <string name="error_empty_text">Что-то пошло не так</string>
    <string name="error_btn_text">Обновить</string>
    <string name="basket_title">Корзина</string>
    <string name="basket_sum">Итого:</string>
    <string name="basket_add_filter">Добавить %s</string>
    <string name="basket_add_change_filter">Готово %s</string>
    <string name="food_detail_title">Описание</string>

    <string name="place_distance_metres_format">~%s м</string>
    <string name="place_distance_km_format">~%.1f км</string>
    <string name="discount_percent_format">%d%% скидка</string>
    <string name="profile_name_not_added">Необязательно</string>
    <string name="profile_change_name">Изменить</string>
    <string name="profile_save_name">Сохранить</string>
</resources>
