<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="86dp">

    <ImageView
        android:id="@+id/foodIv"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/mealTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/tt_norms_medium"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/portionWeightTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/tt_norms_medium"
        android:textColor="@color/grey_text"
        android:textSize="14sp"
        tools:text="@string/settings_fragment_title" />

    <TextView
        android:id="@+id/ingredientsTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/tt_norms_bold"
        android:text="@string/food_ingredients_title"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredientsRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:overScrollMode="never"
        android:visibility="gone" />

    <TextView
        android:id="@+id/descriptionTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/tt_norms_bold"
        android:text="@string/food_description_title"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/descriptionTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/tt_norms_medium"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="@string/settings_fragment_title" />


</LinearLayout>