<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_rounded_bottom_sheet">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/dataContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="48dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                tools:ignore="UselessParent">

                <View
                    android:id="@+id/dismiss"
                    android:layout_width="24dp"
                    android:layout_height="4dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_bottom_sheet_dismiss" />

                <TextView
                    android:id="@+id/dateBornTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/tt_norms_regular"
                    android:text="@string/address_add_new_sheet_title"
                    android:textColor="#959ba4"
                    android:textSize="20sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/addressesRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/addNewAddressContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/round_angle_background_8_grey"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_add_new_address"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/tt_norms_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/address_add_new_btn"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnConfirm"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="12dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/tt_norms_medium"
                android:paddingStart="20dp"
                android:paddingTop="12dp"
                android:paddingEnd="20dp"
                android:paddingBottom="12dp"
                android:text="@string/address_confirm_adding_new"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundTint="@color/accent"
                app:cornerRadius="16dp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:visibility="gone" />

    </FrameLayout>

</androidx.core.widget.NestedScrollView>